[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/objects/areas/pick_place.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/objects/areas/pick_places/work_station.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/hud/hud.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 16, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 40, 16, 8 )

[node name="WorkStation" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="1"]

[node name="ProgressBar" type="Node2D" parent="." index="4"]
z_index = 3

[node name="TextureProgress" type="TextureProgress" parent="ProgressBar" index="0"]
visible = false
margin_left = -8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 14.0
step = 0.05
value = 40.0
texture_under = SubResource( 1 )
texture_over = SubResource( 2 )
texture_progress = SubResource( 1 )
tint_under = Color( 0.996078, 0.905882, 0.380392, 1 )
tint_over = Color( 1, 0, 0.266667, 1 )
tint_progress = Color( 0.172549, 0.909804, 0.960784, 1 )

[node name="Tween" type="Tween" parent="ProgressBar" index="1"]

[node name="WorkTimer" type="Timer" parent="." index="5"]
one_shot = true
__meta__ = {
"_editor_description_": ""
}
[connection signal="timeout" from="WorkTimer" to="." method="_stop_working"]
